# rust_auth

./: .env  Cargo.toml
src/: db.rs  dtos.rs  error.rs  main.rs
src/handler/: auth.rs  users.rs
