[package]
name = "rust_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.3.1"
argon2 = "0.5.1"
async-trait = "0.1.72"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
futures-util = "0.3.28"
jsonwebtoken = "9.2.0"
openssl-probe = "0.1.5"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
sqlx = { version = "0.8.3", features = ["tls-native-tls", "runtime-async-std", "postgres", "chrono", "uuid"] }
utoipa = { version = "5.3.1", features = ["actix_extras", "chrono"] }
utoipa-rapidoc = { version = "5.0.1", features = ["actix-web"] }
utoipa-redoc = { version = "5.0.1", features = ["actix-web"] }
utoipa-swagger-ui = { version = "8.1.1", features = ["actix-web"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
validator = { version = "0.19.0", features = ["derive"] }
